fix scrollbar behavior on firefox

--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -14,6 +14,7 @@
 
   color-scheme: light;
   background-color: #fafafa;
+  scrollbar-gutter: stable;
 }
 
 @media (prefers-color-scheme: light) {
